# sonica

.cursor/rules/: credentials-handling.mdc
py/: .env.example  .gitignore  Dockerfile  backfill_spotify_ids.py  bench_proj.py  bench_search.py  ingest.py  name.py  profile_catalog.py  proxies.txt  pyproject.toml  railway.toml  requirements.txt  server.py  worker.py
py/inj/: download.py  metadata.py
py/scripts/: add_grandparent_monthly_listeners.sql  add_user_projections.sql  backfill_spotify_ids.py  migrate.py  migrate_auth.py  migrate_orphans.py  migrate_parents.py  migrate_schema.sql  migrate_user_parents.sql  reproject.py
py/tmp/: 05a5dd39-c464-4f83-aa60-a2ca6331699a.opus.part  2bcc2c95-353e-4eea-94b9-280b7070f307.opus.part  2bcc2c95-353e-4eea-94b9-280b7070f307.opus.part-Frag9.part  2bcc2c95-353e-4eea-94b9-280b7070f307.opus.ytdl  52fb8b8f-a5b8-4d46-8cc6-0bdb8641e8cb.opus.part  52fb8b8f-a5b8-4d46-8cc6-0bdb8641e8cb.opus.part-Frag6.part  77c17e18-9cd4-4b02-b8bd-9a6ee15584ee.opus.part  b291b5fc-3ac9-44ff-acbd-5da17a634399.opus.part  b291b5fc-3ac9-44ff-acbd-5da17a634399.opus.part-Frag9.part  dcf6dfc9-fbd4-4dd6-8712-c0e1335da3c3.opus
web/: .env.example  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/canvas/: page.tsx
web/app/components/: AppToaster.tsx  ArtistPickerCmdk.tsx  Canvas.tsx  CanvasControls.tsx  CmdK.tsx  LandingSearchDemo.tsx  Nav.tsx  Player.tsx  TrackTile.tsx
web/app/explore/: page.tsx
web/lib/: format-add-people.ts  musApi.ts  pastelFromId.ts
(+22 files in other folders)
