[project]
name = "mus"
version = "0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
src = ["."]
line-length = 120

[tool.ruff.lint]
# E/F: pycodestyle/pyflakes; I: isort; UP: pyupgrade. Omit B to avoid B008 on FastAPI `Depends()` defaults.
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]
